<resources>
    <string name="app_name">Dota Manager</string>
    <string name="lobby_bttn">Lobby</string>
    <string name="newgame_bttn">New Game</string>
    <string name="multipleer_bttn">Multipleer</string>
    <string name="achievements">Achievements</string>
    <string name="about">About</string>
    <string name="team">Teams</string>
    <string name="continue_str">Continue</string>
    <string name="team_trainning">Team\nTraining</string>
    <string name="solo_trainning">Solo\nTraining</string>


    <string name="game_bttn">G\na\nm\ne</string>
    <string name="market_bttn">M\n\a\nr\nk\ne\nt</string>
    <string name="team_bttn">Teams</string>
    <string name="media_bttn">Media</string>
    <string name="practice_bttn">P\nr\na\nc\nt\ni\nc\ne</string>

    <string name="app_id">903146747204</string>


    <string-array name="lineList">
        <item>Top</item>
        <item>Mid</item>
        <item>Bot</item>
    </string-array>

    <string-array name="modernlineList">
        <item>Top</item>
        <item>Mid</item>
        <item>Bot</item>
        <item>Forest</item>
        <item>Triangle</item>
        <item>Enemy Forest</item>
        <item>Enemy Triangle</item>
        <item>Rosh</item>
    </string-array>

    <string name="title_beer_name">Beer Name</string>


    <string name="achievement_1">CgkIxOr2vaQaEAIQAQ</string>

    <string name="play_match">Играть</string>
    <string name="calculate_match">Рассчитать</string>



    <string name="pos1">position 1</string>
    <string name="pos2">position 2</string>
    <string name="pos3">position 3</string>
    <string name="pos4">position 4</string>
    <string name="pos5">position 5</string>



</resources>
