<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_bttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/continue_str"
            android:textSize="14sp"
            android:theme="@style/ButtonSwitchColor"
            android:visibility="gone" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:background="@drawable/button_background"
            android:text="@string/newgame_bttn"
            android:textSize="14sp"
            android:theme="@style/ButtonSwitchColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_background"
            android:text="@string/about"
            android:textSize="14sp"
            android:theme="@style/ButtonSwitchColor" />
    </LinearLayout>


    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>